# rust-slint-studies

./: .gitignore  Cargo.toml  README.md  app_data.json  build.rs
src/: main.rs  tray.rs
ui/: app.slint
